# book_algorithm_solution

codes/: .gitattributes  .gitignore  CMakeLists.pl  CMakeLists.txt
codes/chap02/: code_2_1.lisp  code_2_1.pl  code_2_2.lisp  code_2_2.pl  code_2_3.lisp  code_2_3.pl  code_2_4.cpp  code_2_4.lisp  code_2_4.pl  gene_2_4.pl
codes/chap03/: code_3_1.cpp  code_3_1.lisp  code_3_2.cpp  code_3_2.lisp  code_3_3.cpp  code_3_3.lisp  code_3_4.cpp  code_3_4.lisp  code_3_6.cpp  code_3_6.lisp  gene_3_1.pl  gene_3_3.pl  gene_3_4.pl  gene_3_6.pl  samp_3_1.txt  samp_3_4.txt  samp_3_6_f.txt  samp_3_6_t.txt
codes/chap04/: code_4_2.cpp  code_4_2.lisp  code_4_4.cpp  code_4_4.lisp  code_4_5.cpp  code_4_6.cpp  code_4_6.lisp  code_4_7.cpp  code_4_7.lisp  code_4_8.cpp  code_4_8.lisp  code_4_9.cpp  code_4_9.lisp  samp_4_9.txt
codes/chap05/: code_5_1.cpp  code_5_1.lisp  code_5_3.cpp  code_5_4.cpp  code_5_4.lisp  code_5_6.cpp  code_5_6.lisp  code_5_7.cpp  code_5_7.lisp  code_5_8.cpp  code_5_8.lisp  code_5_8.pl  code_5_9.cpp  code_5_9.lisp  gene_5_1.pl  gene_5_7.pl  gene_5_9.pl  samp_5_1.txt  samp_5_7.txt  samp_5_8.txt
codes/chap06/: code_6_1.cpp  code_6_1.lisp  code_6_2.cpp  code_6_3.cpp  code_6_3.lisp  code_6_4.cpp  code_6_4.lisp  code_6_5.cpp  code_6_5.lisp  gene_6_4.pl  gene_6_5.pl  samp_6_4.txt
codes/chap07/: code_7_1.lisp  code_7_2.cpp  code_7_2.lisp  code_7_3.cpp  code_7_3.lisp  gene_7_1.pl  gene_7_3.pl  samp_7_2.txt
codes/chap08/: code_8_1.cpp  code_8_1.lisp  code_8_2.cpp  code_8_3.cpp  code_8_4.cpp  code_8_4.lisp  code_8_5.cpp  code_8_6.cpp  code_8_6.lisp
codes/chap09/: code_9_1.cpp  code_9_1.lisp  code_9_2.cpp  code_9_2.lisp
codes/chap10/: code_10_3.lisp  code_10_4.cpp  code_10_4.lisp  code_10_5.cpp  code_10_5.lisp  code_10_5.pl  samp_10_3.txt  samp_10_4.txt
codes/chap11/: code_11_3.cpp  code_11_3.lisp  code_11_4.cpp  code_11_4.lisp  samp_11_4.txt
codes/chap12/: code_12_1.cpp  code_12_1.lisp  code_12_2.cpp  code_12_2.lisp  code_12_3.cpp  code_12_3.lisp  code_12_4.cpp  code_12_4.lisp  code_12_5.cpp  code_12_5.lisp  samp_12_1.txt  samp_12_2.txt  samp_12_3.txt
codes/chap13/: code_13_2.cpp  code_13_2.lisp  code_13_3.cpp  code_13_3.lisp  code_13_4.cpp  code_13_4.lisp  code_13_5.cpp  code_13_5.lisp  code_13_6.cpp  code_13_6.lisp  code_13_9.cpp  code_13_9.lisp  samp_13_2.txt  samp_13_3.txt  samp_13_4.txt  samp_13_9.txt
codes/chap14/: code_14_2.cpp  code_14_2.lisp  code_14_3.cpp  code_14_3.lisp  code_14_4.cpp  code_14_4.lisp  code_14_5.cpp  code_14_5.lisp  samp_14_2.txt  samp_14_3.txt  samp_14_5.txt
codes/chap15/: code_15_1.cpp  code_15_1.lisp  samp_15_1.txt
codes/chap16/: code_16_1.cpp  code_16_1.lisp  samp_16_1.txt
codes/chap18/: code_18_1.cpp  code_18_1.lisp  samp_18_1.txt
