cmake_minimum_required(VERSION 3.1)
project( book_algorithm_solution )
set(CMAKE_CXX_STANDARD 11)
add_executable( code_2_1 chap02/code_2_1.cpp )
add_executable( code_2_2 chap02/code_2_2.cpp )
add_executable( code_2_3 chap02/code_2_3.cpp )
add_executable( code_2_4 chap02/code_2_4.cpp )
add_executable( code_3_1 chap03/code_3_1.cpp )
add_executable( code_3_2 chap03/code_3_2.cpp )
add_executable( code_3_3 chap03/code_3_3.cpp )
add_executable( code_3_4 chap03/code_3_4.cpp )
add_executable( code_3_6 chap03/code_3_6.cpp )
add_executable( code_4_2 chap04/code_4_2.cpp )
add_executable( code_4_4 chap04/code_4_4.cpp )
add_executable( code_4_6 chap04/code_4_6.cpp )
add_executable( code_4_7 chap04/code_4_7.cpp )
add_executable( code_4_8 chap04/code_4_8.cpp )
add_executable( code_4_9 chap04/code_4_9.cpp )
add_executable( code_5_1 chap05/code_5_1.cpp )
add_executable( code_5_3 chap05/code_5_3.cpp )
add_executable( code_5_4 chap05/code_5_4.cpp )
add_executable( code_5_6 chap05/code_5_6.cpp )
add_executable( code_5_7 chap05/code_5_7.cpp )
add_executable( code_5_8 chap05/code_5_8.cpp )
add_executable( code_5_9 chap05/code_5_9.cpp )
add_executable( code_6_1 chap06/code_6_1.cpp )
add_executable( code_6_3 chap06/code_6_3.cpp )
add_executable( code_6_4 chap06/code_6_4.cpp )
add_executable( code_6_5 chap06/code_6_5.cpp )
add_executable( code_7_1 chap07/code_7_1.cpp )
add_executable( code_7_2 chap07/code_7_2.cpp )
add_executable( code_7_3 chap07/code_7_3.cpp )
add_executable( code_8_1 chap08/code_8_1.cpp )
add_executable( code_8_4 chap08/code_8_4.cpp )
add_executable( code_8_6 chap08/code_8_6.cpp )
add_executable( code_9_1 chap09/code_9_1.cpp )
add_executable( code_9_2 chap09/code_9_2.cpp )
add_executable( code_10_3 chap10/code_10_3.cpp )
add_executable( code_10_4 chap10/code_10_4.cpp )
add_executable( code_10_5 chap10/code_10_5.cpp )
add_executable( code_11_3 chap11/code_11_3.cpp )
add_executable( code_11_4 chap11/code_11_4.cpp )
add_executable( code_12_1 chap12/code_12_1.cpp )
add_executable( code_12_2 chap12/code_12_2.cpp )
add_executable( code_12_3 chap12/code_12_3.cpp )
add_executable( code_12_4 chap12/code_12_4.cpp )
add_executable( code_12_5 chap12/code_12_5.cpp )
add_executable( code_13_2 chap13/code_13_2.cpp )
add_executable( code_13_3 chap13/code_13_3.cpp )
add_executable( code_13_4 chap13/code_13_4.cpp )
add_executable( code_13_5 chap13/code_13_5.cpp )
add_executable( code_13_6 chap13/code_13_6.cpp )
add_executable( code_13_9 chap13/code_13_9.cpp )
add_executable( code_14_2 chap14/code_14_2.cpp )
add_executable( code_14_3 chap14/code_14_3.cpp )
add_executable( code_14_4 chap14/code_14_4.cpp )
add_executable( code_14_5 chap14/code_14_5.cpp )
add_executable( code_15_1 chap15/code_15_1.cpp )
add_executable( code_16_1 chap16/code_16_1.cpp )
add_executable( code_18_1 chap18/code_18_1.cpp )
